--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/skorsens/typescript/issues"
   },
-  "homepage": "https://github.com/skorsens/typescript#readme"
+  "homepage": "https://github.com/skorsens/typescript#readme",
+  "devDependencies": {
+    "@types/node": "^20.14.10",
+    "tslint": "^6.1.3",
+    "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "eslint": "^9.6.0"
+  }
 }
