--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
   },
   "homepage": "https://github.com/skorsens/typescript#readme",
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
     "@types/node": "^20.14.10",
+    "eslint": "^9.6.0",
+    "globals": "^15.8.0",
     "tslint": "^6.1.3",
-    "typescript": "^5.5.3"
-  },
-  "dependencies": {
-    "eslint": "^9.6.0"
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^7.15.0"
   }
 }
