--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sk_typescript",
   "version": "1.0.0",
   "description": "Sergey typescript exercises",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
