--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "sk_typescript",
   "version": "1.0.0",
   "description": "Sergey typescript exercises",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./dist"
   },
   "repository": {
     "type": "git",
